--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,8 @@
       <h2>Shaping the world for you to live in</h2>
       <a href="./blog">Explore</a>
     </section>
+    <section id="intro"></section>
+    <section id="description">{{.Content}}</section>
     <footer>
         <a href="./about">About Us</a>
         <a href="./blog">Blog</a>
